--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 2rem;
+  width: 100%;
 }
 
 .main {
@@ -113,4 +114,15 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.image {
+  width: 100%;
+  height: 200px;
+}
+
+.center-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
