--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,80 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+}
+
+.card-container {
+  border-radius: 10px;
+  border: 2px solid black;
+  margin: 10px 0 5px 5px;
+  margin-bottom: 50px;
+  padding: 0.5em 0;
+  width: 350px;
+  transition: 0.3s;
+  
+  
+}
+
+.card-container:hover{
+  transform: scale(1.02);
+  box-shadow: 0 0 40px -10px rgba(0,0,0, 0.25);
+  
+}
+
+.card-inner h1 {
+  max-width: 100%;
+  text-align: center;
+}
+.card-inner img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: 400px;
+  padding: 1.2em 1em;
+  text-align: center;
+}
+
+
+.btn {
+  border-radius: 10px;
+  border:rgba(0,0,0, 0.25);
+  border:none;
+  padding: 10px 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  background-color: #00bcd4;
+  text-transform: uppercase;
+  width: 80%;
+  margin-left: 20px;
+  box-shadow: 0 9px #999;  
+ 
+}
+.btn:hover{
+  background-color: var(--gray-300);
+}
+.btn:active{
+  box-shadow: 0 6px #999;
+  transform: translateY(5px);
+}
+
+.card-text {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.card-text p {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
